Add Decks dealer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <title>Memory game</title>
 </head>
 <body>
+  <main class="memory-game">
+
+    
+
+  </main>
   <script src="./js/main.js" defer></script>
 </body>
 </html>
