--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <title>Memory game</title>
 </head>
 <body>
-  <main class="memory-game">
-  </main>
+  <div class="container">
+    <p class="messages">Acertos: 100 - Erros: 100</p>
+    <main class="memory-game">
+    </main>
+  </div>
   <script src="./js/main.js" defer></script>
 </body>
 </html>
