--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Memory game</title>
 </head>
 <body>
+  <audio src="assets/flip.wav" preload="auto" id="flipSound"></audio>
   <div class="container">
     <p class="messages">Acertos: 0 - Erros: 0</p>
     <main class="memory-game">
